# TransPaste

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  README_CN.md  clipboard_translator.py  pyproject.toml  tmp.md  upload_pypi.bat  upload_pypi.sh  upload_to_pypi.py  提示词参考.md
.github/workflows/: ci.yml
images/: Thumbs.db
src/transpaste/: __init__.py  main.py
tests/: test_transpaste.py
