[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transpaste"
version = "0.1.0"
description = "A local LLM-based clipboard translator"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
authors = [
  {name = "CodeOfMe", email = "wedonotuse@outlook.com"}
]
dependencies = [
  "PySide6",
  "requests",
]

[project.scripts]
transpaste = "transpaste.main:main"

[project.urls]
"Homepage" = "https://github.com/CodeOfMe/TransPaste"
